--- a/assets/css/ursa_style.css
+++ b/assets/css/ursa_style.css
@@ -1366,8 +1366,12 @@ main {
     background-color: #333;
     padding: 20px;
     border-radius: 10px;
-
-  text-align: center;
+    text-align: center;
+}
+.nobox {
+    background-color: transparent;
+    padding: 20px;
+    text-align: center;
 }
 /* ------------- */
 .user-box {
