--- a/assets/css/clean_style.css
+++ b/assets/css/clean_style.css
@@ -1085,6 +1085,31 @@ main {
     justify-content: space-between;
     min-width: 0;
 }
+.project-card-important{
+
+    
+    background: linear-gradient(135deg,    var(--fluorescent-pink), #ffcc00);
+    border: 1px solid var(--jet);
+    border-radius: 16px;
+    padding: 1.5rem;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 0;
+}
+.project-card-important-ursa{
+    background: linear-gradient(135deg,     var(--fluorescent-pink), #53ff14);
+    border: 1px solid var(--jet);
+    border-radius: 16px;
+    padding: 1.5rem;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 0;
+}
+
 
 .project-image {
     border-radius: 12px;
@@ -1108,8 +1133,14 @@ main {
 
 .project-info .project-label {
     font-size: 0.9rem;
-    color: #8e9cbb;
+    color: #7d8fb3;
     margin-bottom: 1rem;
+}
+.project-label-important{
+    font-size: 0.9rem;
+    color: #000000;
+    margin-bottom: 1rem;
+
 }
 /* This is a tag css, can be use for any tag */
 .project-tag {
