--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2723,3 +2723,40 @@ textarea.form-input::-webkit-resizer {
     /* Hide the text on mobile screens */
   }
 }
+/* TODO: need to move this away */
+.toc-link {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 16px;
+  padding-left: 10px;
+  display: inline-block;
+  transition: color 0.3s ease;
+}
+
+.progress-bar {
+  position: fixed;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  background-color: transparent;
+  z-index: 1000;
+}
+
+.progress-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.progress-item {
+  margin: 10px 0;
+  padding: 5px;
+  cursor: pointer;
+  color: var(--white-2);
+  font-size: var(--fs-8);
+}
+
+.progress-item.active .toc-link {
+  color: #ee2eff; /* Highlight active item */
+  font-weight: bold;
+}
