add spacer to swp

--- a/assets/css/sunwater_plus.css
+++ b/assets/css/sunwater_plus.css
@@ -1187,6 +1187,13 @@ main {
 
 
 /* shared style */
+.spacer {
+    height: 30px; /* Adjust the height to control the space */
+}
+.small-spacer {
+    height: 15px; /* Adjust the height to control the space */
+}
+
 .horizontal-container {
     display: flex;
     justify-content: space-between;
